# cmake-examples

./: .gitignore  README.md
hello/: CMakeLists.txt  config.h.cmake
hello/src/: extras.cpp  extras.h  main.cpp
